# project-zomboid

./: CMakeLists.txt  README.md  main.cpp
tools/: collision_editor.py  map_editor.py
